force-app/main/default/objects/Scheduling_Settings__mdt/Scheduling_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Scheduling Settings</label>
    <pluralLabel>Scheduling Settings</pluralLabel>
</CustomObject>