force-app/main/default/objects/Scheduling_Settings__mdt/fields/Google_Places_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Google_Places_API_Key__c</fullName>
    <description>Google Maps Places API key for address autocomplete on the booking form</description>
    <label>Google Places API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>