force-app/main/default/objects/Scheduling_Settings__mdt/fields/Stripe_Publishable_Key__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Publishable_Key__c</fullName>
    <label>Stripe Publishable Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>