force-app/main/default/objects/Scheduling_Settings__mdt/fields/Stripe_Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Webhook_Secret__c</fullName>
    <label>Stripe Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>