force-app/main/default/objects/Scheduling_Settings__mdt/fields/Workday_Schedule_Report_Path__c.field-meta.xml
<CustomField>
    <fullName>Workday_Schedule_Report_Path__c</fullName>
    <label>Workday Schedule Report Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>