force-app/main/default/objects/Scheduling_Settings__mdt/fields/Workday_Sync_Days_Ahead__c.field-meta.xml
<CustomField>
    <fullName>Workday_Sync_Days_Ahead__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Workday Sync Days Ahead</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>