force-app/main/default/objects/Scheduling_Settings__mdt/fields/Workday_Tenant_URL__c.field-meta.xml
<CustomField>
    <fullName>Workday_Tenant_URL__c</fullName>
    <label>Workday Tenant URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>