force-app/main/default/objects/Scheduling_Settings__mdt/fields/Zoom_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Account_Id__c</fullName>
    <description>Zoom account ID for Server-to-Server OAuth (optional fallback; primary source is External Credential mapping)</description>
    <label>Zoom Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>