force-app/main/default/objects/Scheduling_Settings__mdt/fields/Zoom_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoom_User_Id__c</fullName>
    <description>Default Zoom user ID or email used as meeting host for Server-to-Server OAuth</description>
    <label>Zoom User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>